--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Advyth Ramachandran
-description: A portfolio website
+description: PhD Student at the University of Colorado–Boulder
 logo: img/IMG_5487.JPG
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
